--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.10.0",
     "eslint": "^9.39.1",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "prettier": "^3.6.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.0",
     "typescript-eslint": "^8.48.0"
   }
