Add tsx configuration and files field to package.json for proper distribution
- Configure tsx to use project tsconfig.json
- Add files field to specify which files to include in npm package (bin, src, tsconfig.json)
- Bump version to 0.2.01

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spindb",
-  "version": "0.2.0",
+  "version": "0.2.01",
   "description": "Spin up local database containers without Docker. A DBngin-like CLI for PostgreSQL.",
   "type": "module",
   "bin": {
@@ -48,5 +48,13 @@
     "prettier": "^3.6.2",
     "typescript": "^5.3.0",
     "typescript-eslint": "^8.48.0"
-  }
+  },
+  "tsx": {
+    "tsconfig": "./tsconfig.json"
+  },
+  "files": [
+    "bin/**/*",
+    "src/**/*",
+    "tsconfig.json"
+  ]
 }
