Refactor project structure to remove TypeScript path aliases and use relative imports
- Move all source files from src/ to project root (cli/, config/, core/, engines/, types/)
- Replace all @/ path alias imports with relative imports (../ or ./)
- Rewrite bin/cli.js to spawn tsx process instead of using tsx/esm/api register
- Update CLI entry point path from src/bin/cli.ts to cli/bin.ts
- Change spawn approach to use child_process with explicit tsx binary path
- Add exit code forwarding and error

--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "spindb",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "Spin up local database containers without Docker. A DBngin-like CLI for PostgreSQL.",
   "type": "module",
   "bin": {
     "spindb": "./bin/cli.js"
   },
   "scripts": {
-    "start": "tsx src/bin/cli.ts",
-    "dev": "tsx watch src/bin/cli.ts",
-    "build": "tsc",
+    "start": "tsx cli/bin.ts",
+    "dev": "tsx watch cli/bin.ts",
     "test": "tsx --test",
     "format": "prettier --write .",
     "lint": "eslint ."
@@ -49,12 +48,12 @@
     "typescript": "^5.3.0",
     "typescript-eslint": "^8.48.0"
   },
-  "tsx": {
-    "tsconfig": "./tsconfig.json"
-  },
   "files": [
-    "bin/**/*",
-    "src/**/*",
-    "tsconfig.json"
+    "bin",
+    "cli",
+    "core",
+    "config",
+    "engines",
+    "types"
   ]
 }
