--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   version-check:
     runs-on: ubuntu-latest
+    outputs:
+      current_version: ${{ steps.current_version.outputs.version }}
+      npm_version: ${{ steps.npm_version.outputs.version }}
     steps:
       - name: Checkout current commit
         uses: actions/checkout@v4
@@ -55,6 +58,7 @@ jobs:
     permissions:
       contents: read
       id-token: write
+      issues: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -73,4 +77,41 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Publish to npm with OIDC
+        id: publish
         run: pnpm publish --no-git-checks --access public
+
+      - name: Create issue on publish failure
+        if: failure() && steps.publish.outcome == 'failure'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const version = '${{ needs.version-check.outputs.current_version }}';
+            const runUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`;
+
+            await github.rest.issues.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title: `❌ Failed to publish v${version} to npm`,
+              body: `## Publish Failed
+
+            The automated publish of version \`${version}\` to npm failed.
+
+            **Run:** ${runUrl}
+
+            Please check the workflow logs for details.
+
+            Common causes:
+            - OIDC trusted publisher not configured on npmjs.com
+            - Package name conflict
+            - Network issues
+
+            This issue was automatically created by the publish workflow.`,
+              labels: ['bug', 'publish-failed']
+            });
+
+      - name: Success summary
+        if: success()
+        run: |
+          echo "🎉 Successfully published v${{ needs.version-check.outputs.current_version }} to npm"
+          echo ""
+          echo "View at: https://www.npmjs.com/package/spindb"
