--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -8,6 +8,7 @@ jobs:
   check-version:
     runs-on: ubuntu-latest
     permissions:
+      contents: read
       pull-requests: write
     steps:
       - name: Checkout PR branch
