--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -76,9 +76,12 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Check npm version
+        run: npm --version
+
       - name: Publish to npm with OIDC
         id: publish
-        run: pnpm publish --no-git-checks --access public
+        run: npm publish --access public --provenance
 
       - name: Create issue on publish failure
         if: failure() && steps.publish.outcome == 'failure'
