--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "type": "git",
     "url": "https://github.com/robertjbass/spindb.git"
   },
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
+  },
   "homepage": "https://github.com/robertjbass/spindb#readme",
   "dependencies": {
     "chalk": "^5.3.0",
