Add create-with-restore feature and improve restore workflow with auto-detection and interactive menu options

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "tsx watch cli/bin.ts",
     "test": "tsx --test",
     "format": "prettier --write .",
-    "lint": "eslint ."
+    "lint": "tsc --noEmit && eslint ."
   },
   "keywords": [
     "postgres",
