Add comprehensive integration test suite and improve multi-engine support across commands
- Add detailed integration test documentation to TODO.md covering PostgreSQL and MySQL test suites with port management and cleanup strategies
- Update clone command to pass engine parameter to processManager.isRunning()
- Enhance connect command to support both PostgreSQL and MySQL clients with engine-specific connection handling and default database resolution
- Improve create command with connection string engine

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "core/**/*",
     "config/**/*",
     "engines/**/*",
-    "types/**/*"
+    "types/**/*",
+    "tests/**/*"
   ],
   "exclude": ["node_modules"]
 }
