Update documentation to include Postgres.app as alternative and improve MySQL description
- Add Postgres.app alongside DBngin as comparable alternatives in CLAUDE.md and README.md
- Update package.json description to explicitly mention MySQL support alongside PostgreSQL
- Bump version to 0.5.3

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spindb",
-  "version": "0.5.2",
-  "description": "Spin up local database containers without Docker. A DBngin-like CLI for PostgreSQL.",
+  "version": "0.5.3",
+  "description": "Spin up local database containers without Docker. A DBngin-like CLI for PostgreSQL and MySQL.",
   "type": "module",
   "bin": {
     "spindb": "./bin/cli.js"
