Add GitHub Actions workflow to check for new PostgreSQL versions on PRs
- Add upstream-version-check.yml workflow that runs on pull requests to main branch
- Workflow fetches latest PostgreSQL version from Homebrew API and compares against configured version in engine-defaults.ts
- Posts informational comment on PRs when newer PostgreSQL version is available with update instructions
- Updates or creates single comment to avoid spam on subsequent pushes
- Includes job summary showing version comparison table

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "test": "pnpm test:pg && pnpm test:mysql",
     "test:pg": "node --import tsx --test tests/integration/postgresql.test.ts",
     "test:mysql": "node --import tsx --test tests/integration/mysql.test.ts",
+    "test:unit": "node --import tsx --test tests/unit/*.test.ts",
+    "test:integration": "pnpm test:pg && pnpm test:mysql",
+    "test:all": "pnpm test:unit && pnpm test:integration",
     "format": "prettier --write .",
     "lint": "tsc --noEmit && eslint ."
   },
