Add Husky git hooks for pre-commit and pre-push linting and bump version to 0.8.0
- Add Husky v9.1.7 as dev dependency with `prepare` script
- Create `.husky/pre-commit` and `.husky/pre-push` hooks running `pnpm run lint`
- Bump package version from 0.7.5 to 0.8.0
- Fix TypeScript type errors in test files: add explicit type annotations to mock objects in `container-manager.test.ts`, `dependency-manager.test.ts`, `port-manager.test.ts`, `start-with-retry.test.ts`, and `update-manager.test.ts`
- Replace

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spindb",
-  "version": "0.7.5",
+  "version": "0.8.0",
   "description": "Spin up local database containers without Docker. A DBngin-like CLI for PostgreSQL and MySQL.",
   "type": "module",
   "bin": {
@@ -16,7 +16,8 @@
     "test:integration": "pnpm test:pg && pnpm test:mysql",
     "test:all": "pnpm test:unit && pnpm test:integration",
     "format": "prettier --write .",
-    "lint": "tsc --noEmit && eslint ."
+    "lint": "tsc --noEmit && eslint .",
+    "prepare": "husky"
   },
   "keywords": [
     "postgres",
@@ -54,6 +55,7 @@
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.10.0",
     "eslint": "^9.39.1",
+    "husky": "^9.1.7",
     "prettier": "^3.6.2",
     "typescript": "^5.3.0",
     "typescript-eslint": "^8.48.0"
