--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spindb",
-  "version": "0.8.1",
+  "version": "0.8.2",
   "description": "Spin up local database containers without Docker. A DBngin-like CLI for PostgreSQL and MySQL.",
   "type": "module",
   "bin": {
@@ -32,7 +32,8 @@
   "license": "PolyForm-Noncommercial-1.0.0",
   "packageManager": "pnpm@9.14.2",
   "engines": {
-    "node": ">=18"
+    "node": ">=18",
+    "pnpm": ">=8"
   },
   "repository": {
     "type": "git",
