Add SQLite engine support with file-based databases, registry tracking, and doctor command for system health checks
- Add SQLite engine with file-based storage in project directories (not ~/.spindb/)
- Add registry system at `~/.spindb/sqlite-registry.json` to track database file locations
- Add `--path` option to `create` command for custom SQLite file locations
- Add `litecli` support for enhanced SQLite shell with `--litecli` and `--install-litecli` flags
- Add `doctor` command with system health checks:

--- a/.gitignore
+++ b/.gitignore
@@ -143,6 +143,12 @@ vite.config.ts.timestamp-*
 
 # Local testing
 _dumps
+.spindb
+
+# SQLite database files (created during testing or development)
+*.sqlite
+*.sqlite3
+*.db
 
 # Private docs
 MONETIZATION.md
