Add SQLite registry migration, attach/detach commands, CWD scanning, and ignore folder management
- Migrate SQLite registry from `~/.spindb/sqlite-registry.json` to `~/.spindb/config.json` under `registry.sqlite` with `version`, `entries`, and `ignoreFolders` fields
- Add `attach` command to register existing SQLite files with optional `--name` flag and JSON output
- Add `detach` command to unregister SQLite databases with `--force` flag (keeps file on disk)
- Add `sqlite` subcommand group with `scan

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spindb",
-  "version": "0.9.2",
+  "version": "0.9.3",
   "description": "Spin up local database containers without Docker. A DBngin-like CLI for PostgreSQL and MySQL.",
   "type": "module",
   "bin": {
@@ -9,11 +9,12 @@
   "scripts": {
     "start": "tsx cli/bin.ts",
     "dev": "tsx watch cli/bin.ts",
-    "test": "pnpm test:pg && pnpm test:mysql",
+    "test": "pnpm test:pg && pnpm test:mysql && pnpm test:sqlite",
     "test:pg": "node --import tsx --test tests/integration/postgresql.test.ts",
     "test:mysql": "node --import tsx --test tests/integration/mysql.test.ts",
+    "test:sqlite": "node --import tsx --test tests/integration/sqlite.test.ts",
     "test:unit": "node --import tsx --test tests/unit/*.test.ts",
-    "test:integration": "pnpm test:pg && pnpm test:mysql",
+    "test:integration": "pnpm test:pg && pnpm test:mysql && pnpm test:sqlite",
     "test:all": "pnpm test:unit && pnpm test:integration",
     "format": "prettier --write .",
     "lint": "tsc --noEmit && eslint .",
