Add ARCHITECTURE.md documentation and update CodeRabbit config with path filters
- Add `ARCHITECTURE.md` with comprehensive architecture documentation (high-level overview, directory structure, three-tier layered architecture, engine abstraction patterns, core modules, data flow diagrams, configuration schemas, key design patterns, type system, testing strategy, and future considerations)
- Move `ignore_paths` from `auto_review` to `path_filters` in `.coderabbit.yaml` (excludes `node_modules/**

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -2,6 +2,9 @@
 # https://docs.coderabbit.ai/guides/configure-coderabbit
 
 reviews:
+  path_filters:
+    - '!node_modules/**'
+    - '!pnpm-lock.yaml'
   path_instructions:
     - path: '**/*'
       instructions: |
@@ -12,8 +15,3 @@ reviews:
         - Windows-specific file path handling
         - Windows shell compatibility
         - Any cross-platform compatibility concerns related to Windows
-
-  auto_review:
-    ignore_paths:
-      - 'node_modules/**'
-      - 'pnpm-lock.yaml'
