Add Windows support with EDB binaries, GitHub Actions workflow, and cross-platform improvements
- Add Windows x64 platform support using EnterpriseDB (EDB) official PostgreSQL binaries
- Add `engines/postgresql/edb-binary-urls.ts` with hardcoded file IDs for EDB downloads (versions 14-17)
- Add `.github/workflows/test-windows.yml` with separate jobs for unit, PostgreSQL, MySQL, and SQLite tests
- Add `unzipper` dependency for cross-platform ZIP extraction (replaces shell commands)

--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
     "commander": "^12.1.0",
     "inquirer": "^9.3.7",
     "ora": "^8.1.1",
-    "tsx": "^4.7.0"
+    "tsx": "^4.7.0",
+    "unzipper": "^0.12.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.10.0",
+    "@types/unzipper": "^0.10.11",
     "eslint": "^9.39.1",
     "husky": "^9.1.7",
     "prettier": "^3.6.2",
