Add push trigger to Windows workflow for feature branch testing
- Add `push` trigger for `feature/windows` branch with TODO comment to remove after tests pass
- Update `pull_request` trigger to only target `main` branch (remove `feature/windows`)
- Move TODO comment from PR triggers to push trigger section

--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -1,9 +1,11 @@
 name: Windows Tests
 
 on:
+  # TODO: Remove push trigger after Windows tests pass once
+  push:
+    branches: [feature/windows]
   pull_request:
-    # TODO - remove feature/windows
-    branches: [main, feature/windows]
+    branches: [main]
   workflow_dispatch: # Allows manual triggering from GitHub UI
 
 jobs:
