ci: use downloaded PostgreSQL binaries instead of system packages and skip MySQL tests on Linux
- Replace system PostgreSQL client installation (apt/brew) with downloaded binaries for version consistency
- Add PATH setup for downloaded PostgreSQL 17.x binaries on Linux/macOS
- Skip MySQL integration tests on Linux due to permission issues with Ubuntu's MySQL package requiring /var/log/mysql/error.log access
- Add explanatory comment about MySQL Linux skip (works on macOS/Windows)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,19 +74,20 @@ jobs:
       - name: Download PostgreSQL binaries
         run: pnpm start engines download postgresql 17
 
-      # Linux: Install psql client tools
-      - name: Install PostgreSQL client (Linux)
-        if: runner.os == 'Linux'
+      # Linux/macOS: Add downloaded PostgreSQL binaries to PATH
+      # We use the downloaded binaries to ensure version match (apt has older versions)
+      - name: Add PostgreSQL to PATH (Linux/macOS)
+        if: runner.os != 'Windows'
         run: |
-          sudo apt-get update
-          sudo apt-get install -y postgresql-client
-
-      # macOS: Install psql client tools
-      - name: Install PostgreSQL client (macOS)
-        if: runner.os == 'macOS'
-        run: |
-          brew install libpq
-          echo "$(brew --prefix libpq)/bin" >> $GITHUB_PATH
+          PG_DIR=$(ls -d ~/.spindb/bin/postgresql-17.* 2>/dev/null | head -1)
+          if [ -n "$PG_DIR" ]; then
+            echo "$PG_DIR/bin" >> $GITHUB_PATH
+            echo "Found PostgreSQL at: $PG_DIR/bin"
+          else
+            echo "ERROR: PostgreSQL 17.x binaries not found"
+            ls -la ~/.spindb/bin/ || true
+            exit 1
+          fi
 
       # Windows: Add downloaded PostgreSQL binaries to PATH
       - name: Add PostgreSQL to PATH (Windows)
@@ -118,6 +119,9 @@ jobs:
 
   # ============================================
   # MySQL Integration Tests
+  # NOTE: MySQL tests are skipped on Linux due to permission issues with
+  # Ubuntu's MySQL package (requires writing to /var/log/mysql/error.log).
+  # MySQL works correctly on macOS and Windows.
   # ============================================
   test-mysql:
     name: MySQL (${{ matrix.os }})
@@ -126,7 +130,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        # Skip Linux due to MySQL permission issues with Ubuntu's package
+        os: [macos-latest, windows-latest]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -142,15 +147,6 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-
-      # Linux: Install MySQL server and client
-      - name: Install MySQL (Linux)
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y mysql-server mysql-client
-          # Stop the default MySQL service (we manage our own instances)
-          sudo systemctl stop mysql || true
 
       # macOS: Install MySQL via Homebrew
       - name: Install MySQL (macOS)
@@ -282,19 +278,26 @@ jobs:
       - name: Download PostgreSQL binaries
         run: pnpm start engines download postgresql 17
 
-      # Linux: Install PostgreSQL client and SQLite
-      - name: Install dependencies (Linux)
+      # Linux: Install SQLite (PostgreSQL comes from downloaded binaries)
+      - name: Install SQLite (Linux)
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y postgresql-client sqlite3
+          sudo apt-get install -y sqlite3
 
-      # macOS: Install PostgreSQL client (SQLite is pre-installed)
-      - name: Install dependencies (macOS)
-        if: runner.os == 'macOS'
+      # Linux/macOS: Add downloaded PostgreSQL binaries to PATH
+      - name: Add PostgreSQL to PATH (Linux/macOS)
+        if: runner.os != 'Windows'
         run: |
-          brew install libpq
-          echo "$(brew --prefix libpq)/bin" >> $GITHUB_PATH
+          PG_DIR=$(ls -d ~/.spindb/bin/postgresql-17.* 2>/dev/null | head -1)
+          if [ -n "$PG_DIR" ]; then
+            echo "$PG_DIR/bin" >> $GITHUB_PATH
+            echo "Found PostgreSQL at: $PG_DIR/bin"
+          else
+            echo "ERROR: PostgreSQL 17.x binaries not found"
+            ls -la ~/.spindb/bin/ || true
+            exit 1
+          fi
 
       # Windows: Add PostgreSQL to PATH and install SQLite
       - name: Setup PostgreSQL (Windows)
